Fixed ors problem for localhost